feat(auth): adds OTP code auth/verification on signin and register

--- a/libs/primeng/src/lib/register/register.component.html
+++ b/libs/primeng/src/lib/register/register.component.html
@@ -8,9 +8,10 @@
   [message]="wait()"
   [showCancel]="false"
   subTitle="You can close this window"
+  [loading]="verifyingOtp()"
   (sendAgain)="register()"
+  (verifyOtp)="verifyOtp($event)"
 ></supabase-wait-message>
-
 } @else {
 <!-- Form -->
 <form [formGroup]="form" (ngSubmit)="register()">
