--- a/libs/primeng/src/lib/wait-message/wait-message.component.scss
+++ b/libs/primeng/src/lib/wait-message/wait-message.component.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.flex-column{
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
 }
@@ -20,6 +24,10 @@
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .px-2 {
